<resources>
    <string name="app_name">PinlessPay</string>
    <string name="login_text">Enter your mobile number to activate PinlessPay on your device</string>
    <string name="login_phone_hint">(201) 777–7777</string>
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>Payment Methods</item>
        <item>Security</item>
        <!--<item>Tell your friends</item>-->
        <item>Support</item>
        <item>Suggestions</item>
        <item>Lock</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="ok">OK</string>

    <string name="title_payment_method">Payment Methods</string>
    <string name="title_security">Security</string>
    <string name="title_tell_your">Tell your friends</string>
    <string name="title_support">Support</string>
    <string name="title_suggestions">Suggestions</string>
    <string name="title_schedules">Schedules</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_recurring">Recurring</string>
    <string name="title_donation">Donations</string>
    <string name="title_profile">Profile</string>

    <string name="raleway_medium">Raleway-Medium.ttf</string>
    <string name="please_wait">Please Wait....</string>

    <string name="about">About</string>
    <string name="next">Next</string>

    <string name="verify_screen_text">Enter 4-digits security code sent to</string>
    <string name="resend_code_within">Resend code within</string>
    <string name="resend_code">Resend code?</string>
    <string name="please_enter_code">Please enter code field</string>
    <string name="make_donation">Make Donation</string>

    <string name="no_recurring">No recurring</string>
    <string name="no_events">No events</string>
    <string name="no_transactions">No transaction</string>
    <string name="permission_alert">You need to allow access to this permissions</string>
    <string name="country">Country</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="address_2">Address line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="new_bank_account">New Bank Account</string>
    <string name="routing_number">Routing Number</string>
    <string name="account_number">Account Number</string>
    <string name="account_type">Account Type</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="id">ID</string>
    <string name="category">Category</string>
    <string name="payment_method">Payment Method</string>
    <string name="hash_tag">#</string>
    <string name="next_run">Next run</string>
    <string name="turn_passcode_on">Turn Passcode On</string>
    <string name="turn_passcode_off">Turn Passcode Off</string>
    <string name="authenticated_devices">Authenticated Devices</string>
    <string name="confirm_passcode">Confirm Passcode</string>
    <string name="enter_new_passcode">Enter new Passcode</string>
    <string name="place_your_text">Place your text</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="sms">SMS</string>
    <string name="tell_a_friend">Tell a friend</string>
    <string name="no_tickets">No tickets</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_enter_email">Please enter email address</string>
    <string name="please_enter_mobile">Please enter mobile</string>
    <string name="please_enter_city">Please enter City</string>
    <string name="please_enter_address">Please enter Address</string>
    <string name="please_enter_state">Please enter State</string>
    <string name="please_enter_zip">Please enter postal code</string>
    <string name="network_error">Network Error! Please try again</string>
    <string name="add_card">Add Card</string>
    <string name="add_bank">Add Bank Account</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="no_payment_methods">You don\'t have any payment methods set up yet</string>
    <string name="please_enter_rounting_number">Please enter routing number</string>
    <string name="please_enter_account_number">Please enter account number</string>
    <string name="please_enter_account_name">Please enter account name</string>
    <string name="please_select_account_type">Please select account type</string>
    <string name="account_name">Account Name(Optional)</string>
    <string name="new_card">New Card</string>
    <string name="card_number">Card Number</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="cvv">CVV</string>
    <string name="card_name">Card Name</string>
    <string name="error_message">Error Occurred! Please try again</string>
    <string name="please_enter_card_number">Please enter routing number</string>
    <string name="please_enter_card_name">Please enter card name</string>
    <string name="please_enter_mm">Please enter mm</string>
    <string name="please_enter_yy">Please enter yy</string>
    <string name="please_enter_cvv">Please enter cvv</string>
    <string name="new_ticket">New Ticket</string>
    <string name="we_would_love_to_hear">We would love to hear some ideas from you</string>
    <string name="describe_your_problem">Describe your problem and we do our best to help you with</string>
    <string name="dollar">$</string>
    <string name="preferred">Preferred</string>
    <string name="na">NA</string>
    <string name="saving_account">Saving</string>
    <string name="checking_account">Checking</string>
    <!-- Account type array  -->
    <string-array name="account_type_array">
        <item>Account Type</item>
        <item>Saving</item>
        <item>Checking</item>
    </string-array>
    <string name="delete">Delete</string>
    <string name="this_device">This device</string>
    <string name="cancel">CANCEL</string>
    <string name="caps_delete">DELETE</string>
    <string name="passcode_does_not_match">Passcode does not match</string>
    <string name="passcode_delete_alert">Do you really want to turn off your Passcode?</string>
    <string name="recurring_delete_alert">Do you really want to delete this?</string>
    <string name="enter_your_passcode">Enter your Passcode</string>
    <!--<string name="lock_alert">Are you sure, you want to Lock it?</string>-->
    <string name="lock_alert">Do you want to turn on your passcode?</string>
    <string name="yes">Yes</string>
    <string name="later">Later</string>
    <string name="amount">Amount</string>

    <string name="add_recurring">Add Recurring</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="please_select_category">Please select category</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_select_payment_method">Please select payment method</string>
    <string name="please_enter_text">Please enter text</string>
    <string name="start_date">Start Date</string>
    <string name="is_default">Default</string>
    <string name="caps_confirm">CONFIRM</string>
    <string name="schedule">Schedule</string>

    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token....</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token, sending the fetched token to the server or subscribing to the PubSub topic. Please try running the sample again.</string>
    <string name="resend_otp">OTP resent successfully</string>
    <string name="repeat_account_number">Repeat Account Number</string>
    <string name="please_enter_repeat_account_number">Please enter repeat account number</string>
    <string name="account_number_does_not_match">Repeat account number does not match with account number</string>
</resources>
