<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_bank_account"
        android:textColor="@color/new_bank_acc_text"
        android:textSize="@dimen/app_name_text_size"
        android:textStyle="normal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_routing_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_routing_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/routing_number"
            android:inputType="numberPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_account_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_number"
            android:inputType="numberPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_account_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_account_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_type"
            android:inputType="numberPassword" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEEEEEE"
        android:clickable="true"
        android:gravity="end"
        android:orientation="vertical">


        <com.pinlesspay.customUi.MyButton
            android:id="@+id/btn_add"
            android:layout_width="90dp"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/padding_5"
            android:background="@drawable/button_blue_bg"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="normal" />
    </LinearLayout>
</LinearLayout>