<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_gravity="center_vertical"
        android:background="@color/blue"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/tell_a_friend"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/toolbar_icon_back" />

        <com.pinlesspay.customUi.MyTextView
            android:id="@+id/txt_schedule_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/app_name_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/about"
            android:padding="@dimen/padding_10"
            android:src="@drawable/icon_facebook" />

        <com.pinlesspay.customUi.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginRight="@dimen/padding_10"
            android:text="@string/facebook"
            android:textColor="@color/schedule_heading_color"
            android:textSize="@dimen/text_size_large"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/about"
            android:padding="@dimen/padding_10"
            android:src="@drawable/icon_twitter" />

        <com.pinlesspay.customUi.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginRight="@dimen/padding_10"
            android:text="@string/twitter"
            android:textColor="@color/schedule_heading_color"
            android:textSize="@dimen/text_size_large"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/about"
            android:padding="@dimen/padding_10"
            android:src="@drawable/icon_gmail" />

        <com.pinlesspay.customUi.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginRight="@dimen/padding_10"
            android:text="@string/email"
            android:textColor="@color/schedule_heading_color"
            android:textSize="@dimen/text_size_large"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/about"
            android:padding="@dimen/padding_10"
            android:src="@drawable/icon_sms" />

        <com.pinlesspay.customUi.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginRight="@dimen/padding_10"
            android:text="@string/sms"
            android:textColor="@color/schedule_heading_color"
            android:textSize="@dimen/text_size_large"
            android:textStyle="normal" />

    </LinearLayout>
</LinearLayout>