<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_gravity="center_vertical"
        android:background="@color/blue"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/toolbar_icon_back" />

        <com.pinlesspay.customUi.MyTextView
            android:id="@+id/txt_schedule_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/new_ticket"
            android:textColor="@color/white"
            android:textSize="@dimen/app_name_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ticket_chat_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin" />

        <LinearLayout
            android:id="@+id/waterfall_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/bg_color"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:contentDescription="@string/app_name"-->
            <!--android:src="@drawable/empty_screen_icon_schedule" />-->

            <com.pinlesspay.customUi.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/padding_30"
                android:gravity="center_horizontal"
                android:text="@string/describe_your_problem"
                android:textColor="@color/waterfall_text_color"
                android:textSize="@dimen/text_size_xlarge"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_1"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/chat_bar"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.pinlesspay.customUi.MyEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/place_your_text"
            android:inputType="text"
            android:padding="@dimen/padding_10"
            android:textColor="#FF241923"
            android:textSize="@dimen/text_size_large" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/about"
            android:paddingBottom="@dimen/padding_8"
            android:paddingLeft="@dimen/padding_10"
            android:paddingRight="@dimen/padding_10"
            android:paddingTop="@dimen/padding_8"
            android:src="@drawable/icon_send" />
    </LinearLayout>
</LinearLayout>