<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_10"
        android:background="@color/blue"
        android:orientation="vertical"
        android:padding="@dimen/padding_15">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/avatar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/padding_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.pinlesspay.customUi.MyTextView
                android:id="@+id/txt_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textSize="@dimen/about_large_text_size" />

            <com.pinlesspay.customUi.MyTextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_10"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_large_text_size" />
        </LinearLayout>


    </ScrollView>

    <com.pinlesspay.customUi.MyButton
        android:id="@+id/btn_make_payment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/padding_10"
        android:background="@drawable/button_blue_bg"
        android:gravity="center"
        android:padding="@dimen/padding_5"
        android:text="@string/make_donation"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium" />

</LinearLayout>