<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_30"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:padding="@dimen/padding_5"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/padding_30"
        android:layout_marginRight="@dimen/padding_30"
        android:gravity="center"
        android:padding="@dimen/padding_5"
        android:text="@string/login_text"
        android:textColor="@color/login_text_color"
        android:textSize="@dimen/text_size_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/padding_15"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_7"
            android:paddingTop="@dimen/padding_7"
            app:ccp_showPhoneCode="false"
            app:contentColor="@color/login_text_color"
            app:hideNameCode="true"
            app:textSize="@dimen/text_size_xlarge" />

        <View
            android:layout_width="@dimen/padding_0.5"
            android:layout_height="match_parent"
            android:background="@color/login_line_color" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginRight="@dimen/padding_10"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:enabled="false"
                android:hint="@string/login_phone_hint"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="@dimen/padding_7"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>